refactor: 强化内容投影与存储一致性